--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,17 +136,6 @@ aside, nav, article, figure {
     background-color: #fff;
     padding: 5px;
 }
-#content article.spam {
-    border: 1px solid #ccc;
-    margin: 0px 0px 5px 0px;
-}
-#content article.spam .title {
-    border-bottom: 1px solid #ccc;
-}
-#content article.subspam {
-    border: 1px solid #ccc;
-    margin: 10px 0px 0px 0px;
-}
 #content div.bheader {
     height: 54px;
     line-height: 54px;
@@ -198,22 +187,82 @@ aside, nav, article, figure {
 #content div.bheader ul li.active a { color: #888; }
 #content div.bheader ul li a:hover { color: #008ee8; }
 
-#content div.main {
+/* Main */
+#content div#main {
     background: #fff;
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
-    padding: 10px 20px 0;
+    border-bottom: 1px solid #ccc;
 }
 
-#content .main form label {
+#content div#main article.spam {
+    border-bottom: 1px solid #ccc;
+    text-shadow: 1px 1px 0 #fff;
+}
+#content div#main article.spam dl dt.subtitle {
+    font-weight: bold;
+    border-bottom: 1px solid #ccc;
+    padding: 5px 10px 5px 0px;
+    height: 20px;
+    line-height: 20px;
+}
+#content div#main article.spam dl dd.username {
+    color: #C4C4C4;
+    margin: 5px 0px 15px;
+}
+#content div#main article.spam dl dd.comment {
+    padding: 15px 0px;
+}
+#content div#main article.spam dl dd.updated_at {
+    color: #C4C4C4;
+}
+#content div#main article.spam dl dt.subtitle h3 {
+    float: left;
+    font-size: 14px;
+}
+#content div#main article.spam dl dd.username p {
+    float: left;
+    font-size: 12px;
+    margin: 0;
+}
+#content div#main article.spam dl dt.subtitle ul,
+#content div#main article.spam dl dd.username ul {
+    float: right;
+    font-size: 11px;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #fff;
+}
+#content div#main article.spam dl dt.subtitle ul li,
+#content div#main article.spam dl dd.username ul li {
+    display: inline;
+    padding: 3px 0;
+    padding-left: 20px;
+    background: url(/static/img/phs.gif) 7px center no-repeat;
+}
+#content div#main article.spam dl dt.subtitle ul li.nobg,
+#content div#main article.spam dl dd.username ul li.nobg {
+    background: none;
+}   
+#content div#main article.spam dl dt.subtitle ul li a,
+#content div#main article.spam dl dd.username ul li a {
+    text-decoration: none;
+    color: #666;
+    outline: none;
+}
+#content div#main article.spam dl dt.subtitle ul li.active a,
+#content div#main article.spam dl dd.username ul li.active a { color: #888; }
+#content div#main article.spam dl dt.subtitle ul li a:hover,
+#content div#main article.spam dl dd.username ul li a:hover { color: #008ee8; }
+
+#content div#main form label {
     font-size: 12px;
     font-weight: bold;
     color: #555;
     margin-right: 10px;
     vertical-align: middle;
 }
-#content .main form input.text,
-#content .main form textarea.text {
+#content div#main form input.text,
+#content div#main form textarea.text {
     width: 410px;
     background: #fefefe;
     border: 1px solid #bbb;
@@ -230,6 +279,7 @@ aside, nav, article, figure {
 #footer {
     border-top: 1px solid #ccc;
     padding: 10px 0px 50px 0px;
+    margin-top: 50px;
 }
 
 #footer div.bottom {
